# my_small_bookstore_cpp

./: CMakeLists.txt  Dockerfile  Makefile  README.md
include/: main_CLI_header.h  main_header.hpp  my_book_factory.hpp  my_cmd.hpp  my_custom_error.hpp  my_getopt.hpp  my_libasm.h  my_parser.h  my_readline.h  my_tests.hpp  my_unistd.h  non_standard_header.h
scripts/: sc_build.sh  sc_flags.sh  sc_unitest.sh
src/: main.cpp
src/my_cmd/: my_cmd.cpp
src/my_libasm/: my_strcpy.asm
src/my_unistd/: alloc_str_arr.c  dynamic_malloc.c  flag_parser.c  flag_state.c  free_opt.c  my_getopt.c
src/non_standard_fn/: count_cmd.c  my_ctoi.c
src/tests/: test.cpp
src/tokenizer/: count_cmd.c  tokenizer.c
tests/: test01.txt  test02.txt  th_tests.cc
